--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -20,7 +20,7 @@ resources:
 - argocd-applications/dex-istio.yaml
 - argocd-applications/knative.yaml
 - argocd-applications/pipelines.yaml
-- argocd-applications/kfserving.yaml
+#- argocd-applications/kfserving.yaml
 - argocd-applications/katib.yaml
 - argocd-applications/central-dashboard.yaml
 - argocd-applications/pod-defaults.yaml
@@ -31,10 +31,10 @@ resources:
 - argocd-applications/tensorboards-web-app.yaml
 - argocd-applications/volumes-web-app.yaml
 - argocd-applications/tensorflow-operator.yaml
-- argocd-applications/pytorch-operator.yaml
-- argocd-applications/mpi-operator.yaml
-- argocd-applications/mxnet-operator.yaml
-- argocd-applications/xgboost-operator.yaml
+#- argocd-applications/pytorch-operator.yaml
+#- argocd-applications/mpi-operator.yaml
+#- argocd-applications/mxnet-operator.yaml
+#- argocd-applications/xgboost-operator.yaml
 - argocd-applications/user-namespace.yaml
 # - argocd-applications/experimental-pvcviewer-controller.yaml
 # - argocd-applications/experimental-volumes-web-app.yaml
