--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -21,16 +21,16 @@ resources:
 #- argocd-applications/knative.yaml
 - argocd-applications/pipelines.yaml
 #- argocd-applications/kfserving.yaml
-- argocd-applications/katib.yaml
+#- argocd-applications/katib.yaml
 - argocd-applications/central-dashboard.yaml
 - argocd-applications/pod-defaults.yaml
 - argocd-applications/jupyter-web-app.yaml
 - argocd-applications/notebook-controller.yaml
 - argocd-applications/profile-controller_access-management.yaml
-- argocd-applications/tensorboard-controller.yaml
-- argocd-applications/tensorboards-web-app.yaml
+#- argocd-applications/tensorboard-controller.yaml
+#- argocd-applications/tensorboards-web-app.yaml
 - argocd-applications/volumes-web-app.yaml
-- argocd-applications/tensorflow-operator.yaml
+#- argocd-applications/tensorflow-operator.yaml
 #- argocd-applications/pytorch-operator.yaml
 #- argocd-applications/mpi-operator.yaml
 #- argocd-applications/mxnet-operator.yaml
