--- a/kubeflow/common/oidc-authservice/kustomization.yaml
+++ b/kubeflow/common/oidc-authservice/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 resources:
 - github.com/kubeflow/manifests/common/oidc-authservice/base
 
+patchesStrategicMerge:
+- configmap-patch.yaml
+
 images:
 - name: gcr.io/arrikto/oidc-authservice
   newName: gcr.io/arrikto/oidc-authservice
